# quant-bot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.claude/agents/: data-engineer.md  docs-keeper.md  execution-engineer.md  quant-skeptic.md  quant-strategist.md  risk-reviewer.md
config/: README.md  config.example.toml
deploy/launchd/: com.quantbot.ingest-fred.plist
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  ROADMAP.md  STATUS.md
docs/superpowers/plans/: 2026-05-02-foundation-phase0.md  2026-05-03-phase1a-foundation-infra.md  2026-05-03-phase1b-a-ingest-infra-fred.md
docs/superpowers/specs/: 2026-05-02-foundation-design.md  2026-05-03-phase1a-foundation-infra-design.md  2026-05-03-phase1b-a-ingest-infra-fred-design.md  2026-05-03-pre-execution-foundation-design.md
go/: Makefile  go.mod  go.sum
go/cmd/quantbot/: main.go
go/internal/buildinfo/: buildinfo_test.go  doc.go
go/internal/cli/: bootstrap.go  bootstrap_test.go  ingest.go  ingest_test.go  migrate.go  status.go  status_test.go  version.go
go/internal/config/: config.go  config_test.go
go/internal/db/: pool.go  pool_integration_test.go  pool_test.go
go/internal/logging/: logger.go  logger_test.go
go/internal/migrate/: migrate.go  migrate_integration_test.go  migrate_test.go
go/internal/repo/: macro_series.go  macro_series_integration_test.go  runs.go  runs_integration_test.go
go/internal/retry/: retry.go  retry_test.go
research/: Makefile  pyproject.toml
research/tests/: test_smoke.py
shared/contracts/: README.md
shared/schema/: README.md
(+16 files in other folders)
